--- a/client/style/style.css
+++ b/client/style/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 button {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 h3 {
@@ -21,12 +21,17 @@ h3 {
     text-align: center;
 }
 
+.voffset15 {
+    margin-top: 15px !important;
+}
+
+
 .voffset30 {
-    margin-top: 30px;
+    margin-top: 30px !important;
 }
 
 .voffset50 {
-    margin-top: 50px;
+    margin-top: 50px !important;
 }
 
 .completed {
